# ot-harjoitustyo

./: .coverage  .coveragerc  .env  .gitignore  1.shaku  README.md  example.shaku  h.mid  music.mid  proto_keep  pyproject.toml  refactor.shaku  tasks.py  thing.shaku  together-example.shaku
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py  music.mid  test.shaku  testing2.shaku  thing.shaku
src/commands/: commands.py
src/config/: shaku_constants.py
src/entities/: buttons.py  controls.py  image_creator.py  midi_creator.py  midi_player.py  music.py  shaku_constants.py  shaku_music.py  shaku_notation.py  shaku_note.py  shaku_part.py  svg_creator.py
src/files/: filing.py
src/graphics/: graphics.py
src/services/: conversions.py  dummy.py  filing.py  image_creator.py  midi_creator.py  music_player.py  positioning.py  svg_creator.py  time_notation.py
src/tests/: buttons_test.py  conversions_test.py  filing_test.py  image_creator_test.py  midi_creator_test.py  music_test.py  shaku_music_test.py  shaku_note_test.py  shaku_part_test.py  svg_creator_test.py  ui_test.py
src/ui/: buttons.py  controls.py  messages.py  ui.py  view.py
