[tool.poetry]
name = "shakuhachi_music_maker"
version = "0.1.0"
description = ""
authors = ["ElectricShakuhachi <haavistoaaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
MIDIUtil = "^1.2.1"
pygame = "^2.1.0"
pretty_midi = "^0.2.9"
ipython = "^7.30.1"
pyFluidSynth = "^1.3.0"
midi2audio = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
